NapID/alias/config-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: config-service
  namespace: napid-alias
spec:
  replicas: 1
  selector:
    matchLabels:
      io.napid.service: config-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        io.napid.service: config-service
    spec:
      containers:
      - image: napidrepo.azurecr.io/config-service:latest
        imagePullPolicy: Always
        name: config-service
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
      imagePullSecrets:
      - name: napidrepo-secret
      restartPolicy: Always
