NapID/alias/napid-cron-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: napid-cron
  namespace: napid-alias
spec:
  replicas: 1
  selector:
    matchLabels:
      io.napid.service: napid-cron
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        io.napid.service: napid-cron
    spec:
      containers:
      - image: napidrepo.azurecr.io/napid-cron:latest
        imagePullPolicy: Always
        name: napid-cron
        resources: {}
      imagePullSecrets:
      - name: napidrepo-secret
      restartPolicy: Always
