NapID/alias/napid-portal-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.napid.service: napid-portal
  name: napid-portal
  namespace: napid-alias
spec:
  replicas: 1
  selector:
    matchLabels:
      io.napid.service: napid-portal
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        io.napid.service: napid-portal
    spec:
      containers:
      - image: napidrepo.azurecr.io/napid-portal:latest
        imagePullPolicy: Always
        name: napid-portal
        ports:
        - containerPort: 8081
          protocol: TCP
        resources: {}
      imagePullSecrets:
      - name: napidrepo-secret
      restartPolicy: Always
      securityContext: {}
