NapID/alias/napid-portal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.napid.service: napid-portal
  name: napid-portal
  namespace: napid-alias
spec:
  ports:
  - name: napid-portal
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    io.napid.service: napid-portal
  type: ClusterIP
