NapID/alias/napid-vendors-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.napid.service: napid-vendors
  name: napid-vendors
  namespace: napid-alias
spec:
  ports:
  - name: napid-vendors
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    io.napid.service: napid-vendors
  type: ClusterIP
